[metadata]
name = pyNNRW
version = 0.1.3
author = Yinsheng Zhang (Ph.D.)
author_email = oo@zju.edu.cn
description = A Python library for NNRW (neural network with random weights) 
long_description = file: README.txt
long_description_content_type = text/markdown
url = https://github.com/zhangys11/pyNNRW
project_urls =
    Bug Tracker = https://github.com/zhangys11/pyNNRW/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    keras
    scikit-learn
    matplotlib
    numpy

[options.packages.find]
where = src